# poo-2026-1

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python_checks.yaml
docs/: 3M_Clase_Pokemon.md
